Updates on responsive css and less

--- a/myStyle_resp_2.less
+++ b/myStyle_resp_2.less
@@ -8,6 +8,12 @@ coffeeAutumnLeaf - #826B5D
 pinkThorne - #a83271
 turquoise - #3a1c70
 coralAutumnLeaf - #A63922
+darkGreen - #003300
+darkBlueOcean - #1d1c2e
+darkBottleGreen - #1c2e22
+darkViolet - #2e1c23
+lightGreen - #2492ab
+paleViolet - #6c5b7c
 */
 @header-main-color: #fa1505;
 @header-secondary-color: lighten(@header-main-color, 10%);
