--- a/myStyle_resp_2.less
+++ b/myStyle_resp_2.less
@@ -88,6 +88,9 @@ paleViolet - #6c5b7c
   font-size: xx-large;
   text-shadow: 0px 0px 5px @shadow-highlight-color;
 }
+#o-mnie-footer {
+	 justify-content: center;
+}
 #navigation
 {
   display: grid;
@@ -170,7 +173,7 @@ button {
 @media screen and (max-width: 1200px) {
   .wrapper {
     grid-template-columns: 1.5fr 6.5fr 2fr;
-    grid-template-rows: 10vh 14vh 66vh 5vh;
+    grid-template-rows: 12vh 14vh 64vh 5vh;
   }
   
   #title {
@@ -194,6 +197,15 @@ button {
 }
 
 /* Small tablet/mobile styles */
+@media screen and (max-width: 900px) {
+	#o-mnie-footer {
+		font-size: small;
+	}
+	#footer-cat-info {
+		font-size: small;
+	}
+}
+
 @media screen and (max-width: 768px) {
   .wrapper {
     grid-template-columns: 1fr;
